# MouseGesture

./: README.md  block_right_click_final.md  block_right_click_final.py  final_gesture.py  main.py  main_by_gemini.py  main_test.py  mouse_gesture.md  mouse_gesture.py  prompt_for_llm  pyproject.toml
