[project]
name = "mgesture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pypiwin32>=223",
    "pywin32>=311",
    "pywinhook>=1.6.2",
]
