[project]
name = "mgesture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyinstaller>=6.16.0",
    "pynput>=1.8.1",
    "pypiwin32>=223",
    "pystray>=0.19.5",
    "pywin32>=311",
    "pywinhook>=1.6.2",
]
